syntax = "proto3";

package replogrpc;
option go_package = "./pkg/replogrpc";


service RepLogService {
  rpc AppendEntryRPC(AppendEntry) returns (AppendEntryResponse) {}
}

message LogEntry {
  int64 Index = 1;
  int64 Term = 2;
  string Command = 3;
}

message AppendEntry {
  int64 Term = 1;
  string LeaderId = 2;
  int64 PrevLogIndex = 3;
  int64 PrevLogTerm = 4;
  repeated LogEntry Entries = 5;
  int64 LeaderCommitIndex = 6;
}

message AppendEntryResponse {
  bool Success = 1;
}